# hsr_knowledge

./: .gitignore  README.md  dependencies.rosinstall
object_state/: CMakeLists.txt  example_perception.yaml  package.xml  uw_rgbd_dataset_robocup_new_classes.yaml
object_state/bagfiles/: shelf.bag  shelf1.bag  shelf1_2.bag  shelf2.bag  table.bag.old  table1.bag
object_state/config/: semantic_map.yaml
object_state/launch/: json_prolog.launch  just_object_state.launch  object_state.launch  object_state_local.launch  rosprolog.launch
object_state/owl/: catalog-v001.xml  objects.owl
object_state/prolog/: beliefstate.pl  init.pl  object_state.pl  spatial_comp.pl  static_preset.pl  surfaces.pl
object_state/scripts/: caffe_class_ontology_check.py  caffe_config_generator.py  gripping_subscriber.py  object_detection_subscriber.py  object_in_shelf_location_service.py  perception_action_client.py  semantic_map_setup.py
